tests/enums/option.expected.javascript.txt
true
false
false
true
10

[stdin]:201
function panic(msg) { throw new Error(msg); }
                      ^

Error: Called unwrap on None
    at panic ([stdin]:201:29)
    at Option.unwrap ([stdin]:26:16)
    at [stdin]:210:20
    at runScriptInThisContext (node:internal/vm:209:10)
    at node:internal/process/execution:118:14
    at [stdin]-wrapper:6:24
    at runScript (node:internal/process/execution:101:62)
    at evalScript (node:internal/process/execution:133:3)
    at node:internal/main/eval_stdin:32:5
    at Socket.<anonymous> (node:internal/process/execution:234:5)

Node.js v20.19.4
